Fixed z-index problem

--- a/static_site/css/styles.css
+++ b/static_site/css/styles.css
@@ -11,6 +11,11 @@ html, body {
   background-color: #f7f7f7;
 }
 
+body {
+	padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 
 /*===============  header begin ============*/
 .header {
@@ -26,6 +31,7 @@ html, body {
 	display: flex;
 	align-items: center;
 	height: 50px;
+	z-index: 10;
 }
 .header > i {
 	font-size: 2em;
@@ -45,15 +51,20 @@ html, body {
 	width: 100%;
 	color: #ccc;
 	font-size: 2.2em;
+	z-index: 10;
 }
-
 
 .footer .home-icon, 
 .footer .location-icon,
 .footer .search-icon,
 .footer .calendar-icon {
+	padding: 0px;
+}
+
+.footer a {
 	padding-top: 5px;
 	padding-bottom: 5px;
+	display: block;
 }
 
 .footer .home-icon:hover, 
@@ -66,17 +77,17 @@ html, body {
 
 /*===============  sidenav begin ============*/
 .sidenav {
-    height: 90%;
-    width: 0;
-    position: fixed;
-    z-index: 100;
-    top: 50px;
-    left: 0;
-    background-color: #000;
-    overflow-x: hidden;
-    transition: 0.8s;
-    padding-top: 50px;
-    box-shadow: 10px 5px 20px grey;
+  height: 90%;
+  width: 0;
+  position: fixed;
+  z-index: 100;
+  top: 50px;
+  left: 0;
+  background-color: #000;
+  overflow-x: hidden;
+  transition: 0.8s;
+  padding-top: 50px;
+  box-shadow: 10px 5px 20px grey;
 }
 
 .sidenav hr {
@@ -84,15 +95,15 @@ html, body {
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 30px;
-    text-decoration: none;
-    font-weight: 300;
-    color: #fff;
-    display: flex;
-    transition: 0.3s;
-    width: 250px;
-    font-size: 1em;
-		align-items: center;
+	padding: 8px 8px 8px 30px;
+  text-decoration: none;
+  font-weight: 300;
+  color: #fff;
+  display: flex;
+  transition: 0.3s;
+  width: 250px;
+  font-size: 1em;
+	align-items: center;
 }
 
 .sidenav a > span {
@@ -104,11 +115,11 @@ html, body {
 }
 
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    font-size: 36px;
-    width: 50px;
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 36px;
+  width: 50px;
 }
 .sidenav_icon {
 	width: 30px;
@@ -119,16 +130,30 @@ html, body {
 
 .home-container {
 	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	position: relative;
+}
+
+.home-image {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	max-height: 100%;
+	max-width: 100%;
+	display: block;
 }
 
 /*===============  search-box begin ============*/
 .search-box {
 	width: 85%;
-	margin: 70px auto 10px;
+	margin: 20px auto 10px;
 }
+.search-box .form-control {
+	font-size: 16px;
+}
+
 /*===============  search.box end ============*/
 
 
@@ -163,7 +188,7 @@ html, body {
 }
 
 .act-list {
-	margin-top: 173px;
+	margin-top: 123px;
 	margin-bottom: 60px;
 }
 
